--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,47 +1,75 @@
+include: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    missing_required_param: error
+    missing_return: error
+    must_be_immutable: error
+    parameter_assignments: error
+    sort_pub_dependencies: ignore
+    sort_unnamed_constructors_first: warning
+    avoid_renaming_method_parameters: warning
+    unnecessary_getters_setters: ignore
+    directives_ordering: ignore
+    todo: ignore
 linter:
   rules:
-    - always_declare_return_types
-    - always_require_non_null_named_parameters
-    - annotate_overrides
-    - avoid_empty_else
-    - avoid_init_to_null
-    - avoid_null_checks_in_equality_operators
-    - avoid_relative_lib_imports
-    - avoid_return_types_on_setters
-    - avoid_shadowing_type_parameters
-    - avoid_types_as_parameter_names
-    - camel_case_extensions
-    - curly_braces_in_flow_control_structures
-    - empty_catches
-    - empty_constructor_bodies
-    - library_names
-    - library_prefixes
-    - no_duplicate_case_values
-    - null_closures
-    - omit_local_variable_types
-    - prefer_adjacent_string_concatenation
-    - prefer_collection_literals
-    - prefer_conditional_assignment
-    - prefer_contains
-    - prefer_equal_for_default_values
-    - prefer_final_fields
-    - prefer_for_elements_to_map_fromIterable
-    - prefer_generic_function_type_aliases
-    - prefer_if_null_operators
-    - prefer_is_empty
-    - prefer_is_not_empty
-    - prefer_iterable_whereType
+    - parameter_assignments
+    - always_use_package_imports
     - prefer_single_quotes
-    - prefer_spread_collections
-    - recursive_getters
-    - slash_for_doc_comments
-    - type_init_formals
-    - unawaited_futures
-    - unnecessary_const
-    - unnecessary_new
-    - unnecessary_null_in_if_null_operators
-    - unnecessary_this
-    - unrelated_type_equality_checks
-    - use_function_type_syntax_for_parameters
-    - use_rethrow_when_possible
-    - valid_regexps
+    - always_declare_return_types
+    - avoid_dynamic_calls
+    - avoid_void_async
+    - avoid_returning_null
+    - avoid_unused_constructor_parameters
+    - cancel_subscriptions
+    - cascade_invocations
+    - comment_references
+    - directives_ordering
+    - invariant_booleans
+    - no_adjacent_strings_in_list
+    - only_throw_errors
+    - package_api_docs
+    - prefer_interpolation_to_compose_strings
+    - sort_child_properties_last
+    - sort_constructors_first
+    - test_types_in_equals
+    - throw_in_finally
+    - unnecessary_null_aware_assignments
+    - unnecessary_statements
+    - avoid_returning_null_for_future
+    - avoid_slow_async_io
+    - avoid_type_to_string
+    - use_named_constants
+    - use_raw_strings
+    - use_late_for_private_fields_and_variables
+    - use_string_buffers
+    - use_to_and_as_if_applicable
+    - sort_pub_dependencies
+    - literal_only_boolean_expressions
+    - avoid_bool_literals_in_conditional_expressions
+    - avoid_catching_errors
+    - avoid_double_and_int_checks
+    - avoid_escaping_inner_quotes
+    - avoid_field_initializers_in_const_classes
+    - avoid_redundant_argument_values
+    - avoid_returning_this
+    - cast_nullable_to_non_nullable
+    - deprecated_consistency
+    - join_return_with_assignment
+    - leading_newlines_in_multiline_strings
+    - missing_whitespace_between_adjacent_strings
+    - no_runtimeType_toString
+    - null_check_on_nullable_type_parameter
+    - prefer_asserts_in_initializer_lists
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_int_literals
+    - sort_unnamed_constructors_first
+    - tighten_type_of_initializing_formals
+    - type_annotate_public_apis
+    - unnecessary_await_in_return
+    - unnecessary_null_checks
+    - unnecessary_nullable_for_final_variable_declarations
+    - unnecessary_parenthesis
+    - unnecessary_raw_strings
